tests/checker/ok/try_operator_on_result.can
Unit => Result<Program, Unit> {
    42
        -> Ok?
        -> Print
    Unit() -> Ok
}
