tests/checker/fail/legacy_binding_alias.can
Unit => Program {
    5.twice() -> Print
}
